<resources>
    <string name="app_name">Sonrisa Library</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="login">log in</string>
    <string name="sign_up">sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="title_activity_slide_menu">@string/app_name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="manage_books">Manage books</string>
    <string name="borrow_books">Borrow books</string>
    <string name="change_password">Change password</string>
    <string name="logout">Log out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm new password</string>
</resources>
