<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_books"
            android:icon="@drawable/manage_books"
            android:title="@string/manage_books"/>
        <item
            android:id="@+id/nav_borrow_books"
            android:icon="@drawable/borrow_book"
            android:title="@string/borrow_books" />

    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/change_password"
                android:title="@string/change_password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
